p2/confs/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    name: app1
  type: ClusterIP
  ports:
    - name: app1
      port: 80
      targetPort: 80
