p2/confs/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    name: app2
  type: ClusterIP
  ports:
    - name: app2
      port: 80
      targetPort: 80
